--- a/scenario5.html
+++ b/scenario5.html
@@ -59,10 +59,17 @@
     <div class="ui page relaxed grid">
 
       <div id="niveauxGaranties" class="sixteen wide column title">
-        <h2>CHOISISSEZ VOTRE FORMULE</h2>
 
         <!-- TABLE NIVEAUX DE GARANTIES -->
         <table class="ui padded striped unstackable table">
+          <thead>
+            <tr>
+              <th></th>
+              <th class="title" colspan="5">
+                  <h2>CHOISISSEZ VOTRE FORMULE</h2>
+              </th>
+            </tr>
+          </thead>
           <thead>
             <tr>
               <th></th>
@@ -111,8 +118,8 @@
               </th>
               <th>
                 <span class="active"></span>
-                <div class="ui radio checkbox checked tiersEtendu">
-                  <input type="radio" name="garantieTop" checked="checked">
+                <div class="ui radio checkbox tiersEtendu">
+                  <input type="radio" name="garantieTop">
                   <label><span></span></label>
                 </div>
               </th>
@@ -135,8 +142,17 @@
           <tbody>
             <tr>
               <td>
-                <h4>Responsabilité civile, Défense
-                Pénale et Recours suite à Accident</h4>
+                <h4>Responsabilité civile
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Cette garantie prend en charge les dommages que le conducteur de votre véhicule pourrait  causer aux autres lors d’un accident de la circulation dont il est responsable. Ainsi seront indemnisés :
+                    <ul>
+                      <li>les personnes blessées ou tuées (les passagers de votre véhicule, les conducteurs et passagers des autres véhicules, les piétons ou cyclistes)</li>
+                      <li>les dégâts matériels causés aux autres (véhicules, façades etc…)</li>
+                    </ul>
+                    En revanche, vos propres dommages (corporels ou matériels) ne sont jamais pris en charge par cette garantie.
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-check icon"></i></td>
               <td><span class="active"></span><i class="icon-check icon"></i></td>
@@ -146,7 +162,27 @@
             </tr>
             <tr>
               <td>
-                <h4>Joker <span>(sans antécédent -25 ans)</span></h4>
+                <h4>Défense Pénale et Recours suite à Accident
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    En cas d’accident de la circulation, nous assurons votre défense devant les tribunaux lorsque vous faites l’objet de poursuites pénales. Si vous n’êtes pas responsable de l’accident, nous vous aidons à obtenir la réparation de vos dommages (véhicule assuré et ses occupants).
+                  </div>
+                </h4>
+              </td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+              <td><span class="active"></span><i class="icon-check icon"></i></td>
+            </tr>
+            <tr>
+              <td>
+                <h4>Joker <span>(sans antécédent -30 ans)</span>
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    5 retours en taxi offerts /an en cas d'incapacité de conduite
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
@@ -156,7 +192,12 @@
             </tr>
             <tr>
               <td>
-                <h4>Sécurité du conducteur <span>(250 000 €)</span></h4>
+                <h4>Sécurité du conducteur <span>(250 000 €)</span>
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Cette garantie prend en charge les préjudices liés aux blessures ou au décès du conducteur de votre véhicule (dépenses de santé/chirurgie/obsèques, handicap temporaire ou définitif, assistance d’une tierce personne, perte de revenus, etc…) lorsqu'il est lui-même responsable de l'accident.
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
@@ -167,7 +208,13 @@
             <tr>
               <td>
                 <h4>Assistance en moins d’1H 24H/24<br>
-                <span>(franchise 50 km en cas de panne)</span></h4>
+                <span>(franchise 50 km en cas de panne)</span>
+                <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                <div class="ui popup transition hidden">
+                  Nous organisons le dépannage/remorquage de votre véhicule 24h/24, 7j/7, en France et dans tous les pays étrangers figurant sur votre carte verte et prenons en charge les frais de dépannage/remorquage.<br>
+                  Nous prenons en charge l’organisation et les frais de taxi, train ou avion pour vous ramener chez vous et ensuite pour venir récupérer votre véhicule une fois réparé. Si vous préférez attendre sur place que votre véhicule soit réparé, nous organisons et prenons en charge les nuits d’hôtel (jusqu’à 2 nuits).
+                </div>
+              </h4>
               </td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
@@ -177,9 +224,12 @@
             </tr>
             <tr>
               <td>
-                <h4>Incendie, Vol, Attentats, Évènements
-                climatiques, Catastrophes Naturelles<br>
-                et technologique</h4>
+                <h4>Incendie, Vol
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous vous indemnisons en cas de vol ou d’incendie de votre véhicule. En cas de vol, si votre véhicule est retrouvé, nous prenons en charge les réparations des dommages subis.
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
@@ -189,7 +239,72 @@
             </tr>
             <tr>
               <td>
-                <h4>Bris de pare-brise</h4>
+                <h4>Évènements climatiques
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous vous indemnisons pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
+                  </div>
+                </h4>
+              </td>
+              <td><span class="active"></span><i class="icon-cross icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+            </tr>
+            <tr>
+              <td>
+                <h4>Catastrophes Naturelles
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe naturelle déclarée par arrêté ministériel au Journal Officiel.
+                  </div>
+                </h4>
+              </td>
+              <td><span class="active"></span><i class="icon-cross icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+            </tr>
+            <tr>
+              <td>
+                <h4>Catastrophes technologique
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe technologique déclarée par arrêté ministériel au Journal Officiel.
+                  </div>
+                </h4>
+              </td>
+              <td><span class="active"></span><i class="icon-cross icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+            </tr>
+            <tr>
+              <td>
+                <h4>Attentats
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’un attentat tel que défini par le Code pénal.
+                  </div>
+                </h4>
+              </td>
+              <td><span class="active"></span><i class="icon-cross icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+              <td><span class="active"></span><i class="icon-check icon status"></i></td>
+            </tr>
+            <tr>
+              <td>
+                <h4>Bris de pare-brise
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    En fonction du niveau choisi, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés : pare-brise, vitres, feux avant ou toit vitré.
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
@@ -199,7 +314,12 @@
             </tr>
             <tr>
               <td>
-                <h4>Dommages tous accidents</h4>
+                <h4>Dommages tous accidents
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous garantissons votre véhicule contre les dommages résultant de toute collision, choc, acte de vandalisme, ou sortie de route que vous soyez responsable ou non.
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
@@ -209,7 +329,13 @@
             </tr>
             <tr>
               <td>
-                <h4>Valeur à neuf 12 mois</h4>
+                <h4>Valeur à neuf 12 mois
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    ?
+                  </div>
+
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
@@ -270,8 +396,8 @@
               </th>
               <th>
                 <span class="active"></span>
-                <div class="ui radio checkbox checked tiersEtendu">
-                  <input type="radio" name="garantieBottom" checked="checked">
+                <div class="ui radio checkbox tiersEtendu">
+                  <input type="radio" name="garantieBottom">
                   <label><span></span></label>
                 </div>
               </th>
@@ -296,11 +422,17 @@
       </div>
 
       <div id="packs" class="sixteen wide column title">
-        <h2>CHOISISSEZ VOTRE PACK</h2>
-
 
         <!-- TABLE PACKS -->
         <table class="ui padded striped unstackable table">
+          <thead>
+            <tr>
+              <th></th>
+              <th class="title" colspan="5">
+                  <h2>CHOISISSEZ VOTRE PACK</h2>
+              </th>
+            </tr>
+          </thead>
           <thead>
             <tr>
               <th></th>
@@ -321,7 +453,13 @@
           <tbody>
             <tr>
               <td>
-                <h4>Sécurité du conducteur</h4>
+                <h4>Sécurité du conducteur
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Cette garantie prend en charge les préjudices liés aux blessures ou au décès du conducteur de votre véhicule (dépenses de santé/chirurgie/obsèques, handicap temporaire ou définitif, assistance d’une tierce personne, perte de revenus, etc…) lorsqu'il est lui-même responsable de l'accident.
+                  </div>
+
+                </h4>
               </td>
               <td><span class="active"></span>450 000 €</td>
               <td><span class="active"></span>450 000 €</td>
@@ -329,7 +467,13 @@
             </tr>
             <tr>
               <td>
-                <h4>Franchise Assistance<br>en cas de panne</h4>
+                <h4>Franchise Assistance<br>en cas de panne
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Nous organisons le dépannage/remorquage de votre véhicule 24h/24, 7j/7, en France et dans tous les pays étrangers figurant sur votre carte verte et prenons en charge les frais de dépannage/remorquage.<br>
+                    Nous prenons en charge l’organisation et les frais de taxi, train ou avion pour vous ramener chez vous et ensuite pour venir récupérer votre véhicule une fois réparé. Si vous préférez attendre sur place que votre véhicule soit réparé, nous organisons et prenons en charge les nuits d’hôtel (jusqu’à 2 nuits).
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span>25 km</td>
               <td><span class="active"></span>0 km</td>
@@ -337,7 +481,12 @@
             </tr>
             <tr>
               <td>
-                <h4>Prêt de véhicule<br>(garage/domicile)</h4>
+                <h4>Prêt de véhicule<br>(garage/domicile)
+                  <img src="images/information_dark_grey.svg" class="iconInfo pop" data-variation="wide inverted" data-position="top center">
+                  <div class="ui popup transition hidden">
+                    Lorsque vous prêtez votre véhicule à une personne autre que votre conjoint, une franchise complémentaire de 1500 € s’applique en cas d’accident  responsable. Cette option vous permet de supprimer la franchise complémentaire pour certains types de conducteurs à qui vous prêtez votre véhicule.
+                  </div>
+                </h4>
               </td>
               <td><span class="active"></span><i class="icon-cross icon status"></i></td>
               <td><span class="active"></span><i class="icon-check icon status"></i></td>
